# Fingent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: config.yaml  logging.yaml
fingent/: __init__.py
fingent/arb/: __init__.py  engine.py  risk.py  strategy.py
fingent/cli/: main.py
fingent/core/: __init__.py  cache.py  config.py  errors.py  http.py  logging.py  quota.py  timeutil.py
fingent/domain/: __init__.py  alerts.py  models.py  report.py  signals.py
fingent/graph/: __init__.py  builder.py  registry.py  state.py
fingent/nodes/: __init__.py  base.py  bootstrap.py  cross_asset.py  macro_auditor.py  news_impact.py  synthesize_alert.py
fingent/providers/: __init__.py  alphavantage.py  base.py  dbnomics.py  finnhub.py  fmp.py  fred.py  gnews.py  marketaux.py  news_router.py  okx.py  polygon.py  polymarket.py
fingent/services/: __init__.py  llm.py  market_direction.py  persistence.py  scheduler.py  sentiment.py  telegram.py
fingent/ui/: streamlit_app.py
tests/: __init__.py  test_nodes.py  test_providers.py
